[m67 merge] Wait on compositor sync token after rescheduling cancelled raster task

Raster tasks can be cancelled between being scheduled and running. When
a resource is used for the first time, we create its texture and mailbox
on the compositor context, and expect the worker context to wait on a
sync token. If the task is cancelled before running, the sync token will
be lost and never waited on.

This CL stores the sync token in GpuBacking::returned_sync_token, and
simplifies the code for passing the sync token to RasterBufferImpl.

TBR=sunnyps@chromium.org

(cherry picked from commit 2f7fef260cb30489018c513a827cd42556259c15)

Test: RasterBufferProviderTest.WaitOnSyncTokenAfterReschedulingTask
Bug: 836230
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I4cf9be7909659a6a0bfdca44b9251539dd448d57
Reviewed-on: https://chromium-review.googlesource.com/1041142
Commit-Queue: Sunny Sachanandani <sunnyps@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#555956}
Reviewed-on: https://chromium-review.googlesource.com/1048140
Reviewed-by: Sunny Sachanandani <sunnyps@chromium.org>
Cr-Commit-Position: refs/branch-heads/3396@{#507}
Cr-Branched-From: 9ef2aa869bc7bc0c089e255d698cca6e47d6b038-refs/heads/master@{#550428}